--- a/CatCafeLanding.css
+++ b/CatCafeLanding.css
@@ -2,28 +2,28 @@ body {
     font-family: 'Inter', sans-serif;
 }
 
-/* navbar section styles */
-#navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 20px;
+p {
+    color: #0A1045;
 }
 
-#happy-cat {
-    color: #F6BD60;
-    font-weight: 800;
-    font-size: 30px;
+h2 {
+    color: #f6bd60;
 }
 
-ul {
+#about {
     display: flex;
     justify-content: space-around;
-    list-style-type: none;
+    align-items: center;
+    padding: 5rem;
+}
+
+.about-us-text{
     width: 50%;
 }
 
-
-p {
-    color: #0A1045;
+/* Tablet and Phone Styles */
+@media only screen and (max-width: 770px){
+    #about {
+        flex-direction: column;
+    }
 }
